доправил некоторые моменты,
верстка

--- a/html/index.html
+++ b/html/index.html
@@ -35,8 +35,8 @@
             </div>
             <hr>
             <div class="banner">
-                <h1>Designs your eyeballs <br>
-                    will thank you for </h1>
+                <h1>Designs your eyeballs<br>
+                will thank you for </h1>
                 <a href="#">Get Started Today</a>
                 <p>Lorem ipsum dolor sit amet, consectetur</p>
             </div>
@@ -90,10 +90,6 @@
                     est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                     laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
                     beatae vitae dicta sunt explicabo.
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                    quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                    labore et dolore magnam aliquam quaerat voluptatem.
                 </span>
             </div>
         </div>
@@ -115,7 +111,7 @@
             </div>
         </div>
         <div class="titles">
-            <div class="title">
+            <div class="text">
                 <h4>A heading is what you need here</h4>
                 <p>Tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -124,10 +120,6 @@
                     est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                     laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
                     beatae vitae dicta sunt explicabo.
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-                    quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
-                    labore et dolore magnam aliquam quaerat voluptatem.
                 </span>
             </div>
             <div class="pictur">
